# hw3

./: CMakeLists.txt  LICENSE  README.md
include/: example.hpp  myFunctions.hpp
sources/: main.cpp  myFunctions.cpp
